--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+annotated-types==0.6.0
+cachetools==5.3.3
+chardet==5.2.0
+colorama==0.4.6
+coverage==7.4.4
+distlib==0.3.8
 exceptiongroup==1.2.0
+filelock==3.13.4
 iniconfig==2.0.0
+mypy==1.9.0
+mypy-extensions==1.0.0
 packaging==24.0
+platformdirs==4.2.0
 pluggy==1.4.0
+pydantic==2.7.1
+pydantic-core==2.18.2
+pyproject-api==1.6.1
 pytest==8.1.1
+pytest-cov==5.0.0
 tomli==2.0.1
+tox==4.14.2
+typing-extensions==4.11.0
+virtualenv==20.25.3
