CIを実行できるよう修正

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,6 @@ skip_missing_interpreters = True
 deps =
     pytest
     pytest-cov
+    -rrequirements.txt
+
 commands = pytest --cov=src --cov=tests {posargs}
