CIに型チェックを追加

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,6 @@ deps =
     pytest-cov
     -rrequirements.txt
 
-commands = pytest --cov=src --cov=tests {posargs}
+commands =
+    mypy .
+    pytest --cov=src --cov=tests {posargs}
