--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.6.0
+black==24.4.2
 cachetools==5.3.3
 chardet==5.2.0
+click==8.1.7
 colorama==0.4.6
 coverage==7.4.4
 distlib==0.3.8
@@ -10,6 +12,7 @@ iniconfig==2.0.0
 mypy==1.9.0
 mypy-extensions==1.0.0
 packaging==24.0
+pathspec==0.12.1
 platformdirs==4.2.0
 pluggy==1.4.0
 pydantic==2.7.1
